# tucal

./: .gitignore  Makefile  README.md  db.sh  deploy.sh  impressum.default.php  setup.sh  todo.md  tsconfig.json  tucal.default.ini
data/: areas.csv  buildings.csv  course_acronyms.csv  lecture_tube.csv  rooms.csv
data/tiss/: course_types.csv  event_types.csv
doc/: database.md
docs/: i18n.md
examples/nginx/: nginx.conf
examples/systemd/: tucal-backend.service  tucal-event-merger.service  tucal-scheduler.service
i18n/: SUPPORTED
i18n/locales/: bar_AT
rust/: Cargo.toml  Rocket.toml
rust/src/: main.rs
sql/: 00-create-tucal.sql  00-create.sql  00-tucal.sql  01-create-tiss.sql  01-insert-tiss.sql  01-tucal-session.sql  02-create-tuwel.sql  02-tucal-job.sql  03-create-event.sql  03-tucal-room.sql  04-tucal-dau.sql  10-tiss.sql  20-tuwel.sql  30-tucal-group.sql  31-tucal-calendar.sql  31-tucal-group-tiss-triggers.sql  32-tucal-group-tuwel-triggers.sql  40-tucal-calendar.sql  41-tucal-export.sql  90-delete-events.sql
src/: job-status.py  rooms.py  scheduler.py  sort-rooms.py  sync-cal-tiss.py  sync-cal-tuwel.py  sync-courses.py  sync-db.py  sync-user.py
src-js/: calendar.ts  definitions.ts  main.ts
src/tucal/: __init__.py  (+9 more)
tools/: db.sh  deploy.sh  job-status.py  minify-css.sh  msgfmtjs.sh  plot-dau.py  plot-job.py  schedule.py
typescript/: calendar.ts  definitions.ts  job.ts  localisation.ts  main.ts  tsconfig.json
www/: app.webmanifest  base.html.tera  contact.php  error.html.tera  impressum.php  index.html.tera  index.php  macros.tera  search.php
(+119 files in other folders)
