[package]
name = "tucal"
version = "0.1.0"
authors = ["Lorenz Stechauner <lorenz.stechauner@necronda.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_async_compression = "0.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
